kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: internship
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: hashonekyaw/internshipa:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: internship
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
