kubernetes/intern.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intern
  namespace: internship
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intern
  template:
    metadata:
      labels:
        app: intern
    spec:
      containers:
      - name: intern
        image: hashonekyaw/internshipf:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html/uploads
          name: images-storage
      volumes:
      - name: images-storage
        persistentVolumeClaim:
          claimName: images-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: intern-service
  namespace: internship
spec:
  type: NodePort
  selector:
    app: intern
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30994  # maps to http://localhost:9091 (if you're using Docker Desktop or Minikube)
