kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intern-ingress
  namespace: internship
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"   # disable forced https redirect
spec:
  ingressClassName: nginx
  rules:
  - host: intern.company
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: intern-service
            port:
              number: 80
  - host: admin.intern.company
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80
